F-Curve "Stepped interpolation" modifier "restrict frame-range" IN and OUT parameters broken. #52009

Closed
opened 2017-07-09 22:06:39 +02:00 by Konstantin · 7 comments

System Information
Windows 8.1, AMD Radeon HD 7480D

Blender Version
Broken: Blender 2.78.5 0172ed8
Worked: (optional)

Short description of error

"Stepped interpolation" F-Curve modifier "restrict frame-range" IN and OUT parameters cannot be setted to values other than zero.

Exact steps for others to reproduce the error
Open .blend file and try to change IN or OUT values.

FcurveBug.blend

**System Information** Windows 8.1, AMD Radeon HD 7480D **Blender Version** Broken: Blender 2.78.5 0172ed8 Worked: (optional) **Short description of error** "Stepped interpolation" F-Curve modifier "restrict frame-range" IN and OUT parameters cannot be setted to values other than zero. **Exact steps for others to reproduce the error** Open .blend file and try to change IN or OUT values. [FcurveBug.blend](https://archive.blender.org/developer/F656730/FcurveBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ko

Added subscriber: @Ko
Konstantin changed title from F-Curve modifier "restrict frame-range" IN and OUT parameters broken. to F-Curve "Stepped interpolation" modifier "restrict frame-range" IN and OUT parameters broken. 2017-07-09 22:09:14 +02:00
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Joshua Leung self-assigned this 2017-07-11 07:36:55 +02:00
Member

Strange... investigating now...

Strange... investigating now...

This issue was referenced by fdfcbfd040

This issue was referenced by fdfcbfd0404183b78623bd7a65f2701ea23ed463
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Just to reiterate a note I made in the commit -- You'll need to manually click on the start and end frame properties of the Stepped FModifier to flush the relevant changes.

Just to reiterate a note I made in the commit -- You'll need to manually click on the start and end frame properties of the Stepped FModifier to flush the relevant changes.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52009
No description provided.